istio/staging/gateway-staging.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: app-staging-gateway
  namespace: staging
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - app-staging.example.com
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - app-staging.example.com
    tls:
      mode: SIMPLE
      credentialName: app-staging-tls-secret
